--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header class="header">
         <img class="header__logo" src="./images/header-logo.svg" alt="лого">
         <div class="header__links">
-            <a href="#" class="header__link_active header__link">Ru</a>
-            <a href="#" class="header__link">En</a>
+            <a href="#" class="header__link_active header__link" target="_self">Ru</a>
+            <a href="#" class="header__link" target="_self">En</a>
         </div>
     </header>
     <main class="content">
@@ -53,7 +53,7 @@
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
                 <p class="place__url">URL</p>
-                <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
+                <a href="http://park-kosa.ru" target="_blank" class="place__link">park-kosa.ru</a>
             </div>
             <img class="place__image" src="./images/place-kosa.jpg" alt="куршский залив">
             <div class="place__text">
@@ -65,7 +65,7 @@
             <h2 class="place__title">Кольский</h2>
             <div class="place__website">
                 <p class="place__url">URL</p>
-                <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic</a>
+                <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank"  class="place__link">National Geographic</a>
             </div>
             <img class="place__image" src="./images/place-kolsky.jpg" alt="набережная кольского полуострова">
             <div class="place__text">
@@ -77,7 +77,7 @@
             <h2 class="place__title">Алтай</h2>
             <div class="place__website">
                 <p class="place__url">URL</p>
-                <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link">Facebook</a>
+                <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank" class="place__link">Facebook</a>
             </div>
             <img class="place__image" src="./images/place-altai.jpg" alt="ноутбук на фоне леса">
             <div class="place__text">
@@ -93,7 +93,7 @@
             <h2 class="place__title">Зимний Байкал</h2>
             <div class="place__website">
                 <p class="place__url">URL</p>
-                <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
+                <a href="https://vk.com/baikalmile" target="_blank" class="place__link">https://vk.com/baikalmile</a>
             </div>
             <img class="place__image" src="./images/place-winter-baikal.jpg" alt="лед на замерзшем озере">
             <div class="place__text">
@@ -107,7 +107,7 @@
             <h2 class="place__title">Карелия</h2>
             <div class="place__website">
                 <p class="place__url">URL</p>
-                <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
+                <a href="http://vodlozero.ru" target="_blank" class="place__link">http://vodlozero.ru/</a>
             </div>
             <img class="place__image" src="./images/place-karelia.jpg" alt="озеро">
             <div class="place__text">
@@ -116,7 +116,7 @@
         </article>
     </section>
 
-    <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover">
+    <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
         <div class="cover__overlay"></div>
@@ -124,11 +124,11 @@
     </main>
     <footer class="footer">
         <div class="footer__links">
-            <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
-            <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
-            <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
-            <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
-            <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+            <a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a>
+            <a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a>
+            <a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a>
+            <a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a>
+            <a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a>
         </div>
         <p class="footer__copyright">&copy; 2020. Впишите своё имя</p>
     </footer>
