итерация 3 (финал дай бог)

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a>
             <a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a>
         </nav>
-        <p class="footer__copyright">&copy; 2020. Вячеслав(</p>
+        <p class="footer__copyright">&copy; 2020. Вячеслав Лихачев</p>
     </footer>
 </body>
 </html>
